lib/core/native/abzar_bindings.g.dart

// AUTO-GENERATED by ffigen from native/include/abzar/abzar_api.h.
// Regenerate with tool/gen_bindings.sh; do not hand-edit.
// ignore_for_file: camel_case_types, non_constant_identifier_names

import 'dart:ffi' as ffi;

final class AbzJobReport extends ffi.Struct {
  @ffi.Uint32()
  external int struct_size;
  @ffi.Int32()
  external int error_code;
  @ffi.Int32()
  external int state;
  @ffi.Uint64()
  external int input_bytes;
  @ffi.Uint64()
  external int output_bytes;
  @ffi.Uint64()
  external int duration_ms;
  @ffi.Uint32()
  external int page_count;
  @ffi.Uint32()
  external int warning_count;
}

typedef AbzProgressCallbackFunction = ffi.Void Function(
  ffi.Pointer<ffi.Void>,
  ffi.Double,
  ffi.Pointer<ffi.Char>,
);

typedef AbzProgressCallback
    = ffi.Pointer<ffi.NativeFunction<AbzProgressCallbackFunction>>;

const int ABZAR_ABI_VERSION = 1;

final class AbzarBindings {
  AbzarBindings(this.library)
      : abz_abi_version = library.lookupFunction<ffi.Uint32 Function(), int Function()>('abz_abi_version'),
        abz_engine_version = library.lookupFunction<ffi.Pointer<ffi.Char> Function(), ffi.Pointer<ffi.Char> Function()>('abz_engine_version'),
        abz_build_features = library.lookupFunction<ffi.Pointer<ffi.Char> Function(), ffi.Pointer<ffi.Char> Function()>('abz_build_features'),
        abz_is_format_supported = library.lookupFunction<ffi.Int32 Function(ffi.Pointer<ffi.Char>, ffi.Int32), int Function(ffi.Pointer<ffi.Char>, int)>('abz_is_format_supported'),
        abz_job_create = library.lookupFunction<ffi.Pointer<ffi.Void> Function(ffi.Pointer<ffi.Char>), ffi.Pointer<ffi.Void> Function(ffi.Pointer<ffi.Char>)>('abz_job_create'),
        abz_job_run = library.lookupFunction<ffi.Int32 Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.NativeFunction<AbzProgressCallbackFunction>>, ffi.Pointer<ffi.Void>), int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.NativeFunction<AbzProgressCallbackFunction>>, ffi.Pointer<ffi.Void>)>('abz_job_run'),
        abz_job_cancel = library.lookupFunction<ffi.Void Function(ffi.Pointer<ffi.Void>), void Function(ffi.Pointer<ffi.Void>)>('abz_job_cancel'),
        abz_job_report = library.lookupFunction<ffi.Int32 Function(ffi.Pointer<ffi.Void>, ffi.Pointer<AbzJobReport>), int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<AbzJobReport>)>('abz_job_report'),
        abz_job_error_message = library.lookupFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>), ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>)>('abz_job_error_message'),
        abz_job_report_json = library.lookupFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>), ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>)>('abz_job_report_json'),
        abz_job_destroy = library.lookupFunction<ffi.Void Function(ffi.Pointer<ffi.Void>), void Function(ffi.Pointer<ffi.Void>)>('abz_job_destroy'),
        abz_convert_file = library.lookupFunction<ffi.Int32 Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Pointer<ffi.Char>>), int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Pointer<ffi.Char>>)>('abz_convert_file'),
        abz_compress_file = library.lookupFunction<ffi.Int32 Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Int32, ffi.Pointer<ffi.Pointer<ffi.Char>>), int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, int, ffi.Pointer<ffi.Pointer<ffi.Char>>)>('abz_compress_file'),
        abz_merge_files = library.lookupFunction<ffi.Int32 Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Pointer<ffi.Char>>), int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Pointer<ffi.Char>>)>('abz_merge_files'),
        abz_split_file = library.lookupFunction<ffi.Int32 Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Pointer<ffi.Char>>, ffi.Pointer<ffi.Pointer<ffi.Char>>), int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Pointer<ffi.Char>>, ffi.Pointer<ffi.Pointer<ffi.Char>>)>('abz_split_file'),
        abz_extract_text = library.lookupFunction<ffi.Int32 Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Pointer<ffi.Char>>, ffi.Pointer<ffi.Pointer<ffi.Char>>), int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Pointer<ffi.Char>>, ffi.Pointer<ffi.Pointer<ffi.Char>>)>('abz_extract_text'),
        abz_encrypt_container = library.lookupFunction<ffi.Int32 Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Pointer<ffi.Char>>), int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Pointer<ffi.Char>>)>('abz_encrypt_container'),
        abz_decrypt_container = library.lookupFunction<ffi.Int32 Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Pointer<ffi.Char>>), int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Pointer<ffi.Char>>)>('abz_decrypt_container'),
        abz_pdf_replace_text = library.lookupFunction<ffi.Int32 Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Int32, ffi.Pointer<ffi.Pointer<ffi.Char>>), int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, int, ffi.Pointer<ffi.Pointer<ffi.Char>>)>('abz_pdf_replace_text'),
        abz_pdf_delete_image = library.lookupFunction<ffi.Int32 Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Int32, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Pointer<ffi.Char>>), int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, int, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Pointer<ffi.Char>>)>('abz_pdf_delete_image'),
        abz_pdf_add_image = library.lookupFunction<ffi.Int32 Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Int32, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Double, ffi.Double, ffi.Double, ffi.Double, ffi.Pointer<ffi.Pointer<ffi.Char>>), int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, int, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, double, double, double, double, ffi.Pointer<ffi.Pointer<ffi.Char>>)>('abz_pdf_add_image'),
        abz_pdf_replace_image = library.lookupFunction<ffi.Int32 Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Int32, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Pointer<ffi.Char>>), int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, int, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Pointer<ffi.Char>>)>('abz_pdf_replace_image'),
        abz_pdf_flatten = library.lookupFunction<ffi.Int32 Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Pointer<ffi.Char>>), int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Pointer<ffi.Char>>)>('abz_pdf_flatten'),
        abz_pdf_add_bookmark = library.lookupFunction<ffi.Int32 Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Int32, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Pointer<ffi.Char>>), int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, int, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Pointer<ffi.Char>>)>('abz_pdf_add_bookmark'),
        abz_pdf_add_annotation = library.lookupFunction<ffi.Int32 Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Int32, ffi.Pointer<ffi.Char>, ffi.Double, ffi.Double, ffi.Pointer<ffi.Pointer<ffi.Char>>), int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, int, ffi.Pointer<ffi.Char>, double, double, ffi.Pointer<ffi.Pointer<ffi.Char>>)>('abz_pdf_add_annotation'),
        abz_pdf_repair = library.lookupFunction<ffi.Int32 Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Pointer<ffi.Char>>), int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Pointer<ffi.Char>>)>('abz_pdf_repair'),
        abz_pdf_set_password = library.lookupFunction<ffi.Int32 Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Int32, ffi.Int32, ffi.Int32, ffi.Int32, ffi.Pointer<ffi.Pointer<ffi.Char>>), int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, int, int, int, int, ffi.Pointer<ffi.Pointer<ffi.Char>>)>('abz_pdf_set_password'),
        abz_pdf_remove_password = library.lookupFunction<ffi.Int32 Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Pointer<ffi.Char>>), int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Pointer<ffi.Char>>)>('abz_pdf_remove_password'),
        abz_process_scan_image = library.lookupFunction<ffi.Int32 Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Int32, ffi.Int32, ffi.Double, ffi.Double, ffi.Pointer<ffi.Pointer<ffi.Char>>), int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, int, int, double, double, ffi.Pointer<ffi.Pointer<ffi.Char>>)>('abz_process_scan_image'),
        abz_free = library.lookupFunction<ffi.Void Function(ffi.Pointer<ffi.Void>), void Function(ffi.Pointer<ffi.Void>)>('abz_free');

  final ffi.DynamicLibrary library;
  final int Function() abz_abi_version;
  final ffi.Pointer<ffi.Char> Function() abz_engine_version;
  final ffi.Pointer<ffi.Char> Function() abz_build_features;
  final int Function(ffi.Pointer<ffi.Char>, int) abz_is_format_supported;
  final ffi.Pointer<ffi.Void> Function(ffi.Pointer<ffi.Char>) abz_job_create;
  final int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.NativeFunction<AbzProgressCallbackFunction>>, ffi.Pointer<ffi.Void>) abz_job_run;
  final void Function(ffi.Pointer<ffi.Void>) abz_job_cancel;
  final int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<AbzJobReport>) abz_job_report;
  final ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>) abz_job_error_message;
  final ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>) abz_job_report_json;
  final void Function(ffi.Pointer<ffi.Void>) abz_job_destroy;
  final int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Pointer<ffi.Char>>) abz_convert_file;
  final int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, int, ffi.Pointer<ffi.Pointer<ffi.Char>>) abz_compress_file;
  final int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Pointer<ffi.Char>>) abz_merge_files;
  final int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Pointer<ffi.Char>>, ffi.Pointer<ffi.Pointer<ffi.Char>>) abz_split_file;
  final int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Pointer<ffi.Char>>, ffi.Pointer<ffi.Pointer<ffi.Char>>) abz_extract_text;
  final int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Pointer<ffi.Char>>) abz_encrypt_container;
  final int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Pointer<ffi.Char>>) abz_decrypt_container;
  final int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, int, ffi.Pointer<ffi.Pointer<ffi.Char>>) abz_pdf_replace_text;
  final int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, int, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Pointer<ffi.Char>>) abz_pdf_delete_image;
  final int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, int, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, double, double, double, double, ffi.Pointer<ffi.Pointer<ffi.Char>>) abz_pdf_add_image;
  final int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, int, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Pointer<ffi.Char>>) abz_pdf_replace_image;
  final int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Pointer<ffi.Char>>) abz_pdf_flatten;
  final int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, int, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Pointer<ffi.Char>>) abz_pdf_add_bookmark;
  final int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, int, ffi.Pointer<ffi.Char>, double, double, ffi.Pointer<ffi.Pointer<ffi.Char>>) abz_pdf_add_annotation;
  final int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Pointer<ffi.Char>>) abz_pdf_repair;
  final int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, int, int, int, int, ffi.Pointer<ffi.Pointer<ffi.Char>>) abz_pdf_set_password;
  final int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Pointer<ffi.Char>>) abz_pdf_remove_password;
  final int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, int, int, double, double, ffi.Pointer<ffi.Pointer<ffi.Char>>) abz_process_scan_image;
  final void Function(ffi.Pointer<ffi.Void>) abz_free;
}
